--- a/app/templates/analysis.html
+++ b/app/templates/analysis.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
 <ul class="tab">
-	<button class="tablinks" onclick="openTab(event, 'Survivor-Perks')">Survivor Perks</button>
-	<button class="tablinks" onclick="openTab(event, 'Killer-Addons')" id="defaultOpen">Killer Addons</button>
-	<button class="tablinks" onclick="openTab(event, 'Survivor-Items')">Items</button>
+	<button class="tablinks" onclick="openTab(event, 'Survivor-Perks')" data-tab-open="">Survivor Perks</button>
+	<button class="tablinks" onclick="openTab(event, 'Killer-Addons')" data-tab-open="default">Killer Addons</button>
+	<button class="tablinks" onclick="openTab(event, 'Survivor-Items')" data-tab-open="">Items</button>
 
 </ul>
 
@@ -255,35 +255,57 @@
 						<button class="moveSlots" id="{{ name + '-move' }}" onclick="moveSlot(`{{name}}`)">Compare</button>
 					</div>
 				</div>
-				{% endif %}
-				
-				<!-- <div class="subsubtab"> -->
-					<!-- {% for name in ['Items', 'Addons'] %} -->
-					<!-- <button class="subsubTabLinks" onclick="openSubSubTab(event, '{{ name }}Content', false); clearSlots('{{ name }}')"> -->
-						<!-- <span>{{ name }}</span> -->
-						<!-- <img class="lozad" data-src={{ info['image'] }} height="80" width="80"> -->
-					<!-- </button> -->
-					<!-- {% endfor %} -->
-				<!-- </div> -->
-		
-				<div class="itemsMainContent">
-					<div class="subsubTabContent" id="ItemsContent">
-						{% for rarity,items in info['versions'].items() %}
-						<div class="flex-container">
-							{% for item in items %}
-							<div class="container-items">
-								<img class="item-image lozad" data-src={{ item['image-alt'] }} height="80" width="80" draggable="true"
-									ondragstart="drag(event)" id={{ item['item-id'] }} credit="u/ambieobambie">
+				<div class="itemsAddonsContainer">
+					<ul class="subsubtab">
+						{% for subname in ['Items', 'Addons'] %}
+						<button class="subsubTabLinks" onclick="openSubSubTab(event, '{{ name }}-{{ subname }}Content', false)" data-tab-open="">
+							<span>{{ subname }}</span>
+							<img class="lozad" data-src={{ info['image'] }} height="80" width="80">
+						</button>
+						{% endfor %}
+					</ul>
+					<div class="itemsMainContent">
+						<div class="subsubTabContent" id="{{ name }}-ItemsContent">
+							{% for rarity,items in info['versions'].items() %}
+							<div class="flex-container">
+								{% for item in items %}
+								<div class="container-items">
+									<img class="item-image lozad" data-src={{ item['image-alt'] }} height="80" width="80" draggable="true"
+										ondragstart="drag(event)" id={{ item['item-id'] }} credit="u/ambieobambie">
+									<figcaption>
+										<span>{{ item['name'] }}</span>
+									</figcaption>
+									<div class="overlay {{ 'overlayItem' + ''.join(rarity.split()) }}">
+										<div class="overlay-heading">
+											<span style="font-size: 16px; font-weight: 600;">{{ item['name'] }}</span>
+											<span style="font-size: 13px;">{{ rarity }}</span>
+										</div>
+										<div class="overlay-content">
+											<p style="font-size: 15px;">{{ item['description'] }}</p>
+										</div>
+									</div>
+								</div>
+								{% endfor %}
+							</div>
+							{% endfor %}
+						</div>
+						<div class="subsubTabContent" id="{{ name }}-AddonsContent">
+							{% for rarity,addons in info['addons'].items() %}
+							<div class="flex-container">
+							{% for addon in addons %}
+							<div class="container-addons">
+								<img class="addon-image lozad" data-src={{ addon['addon-image-alt'] }} height="80" width="80" draggable="true"
+									ondragstart="drag(event)" id={{ addon['addon-id'] }} credit="u/ambieobambie">
 								<figcaption>
-									<span>{{ item['name'] }}</span>
+									<span>{{ addon['addon-name'] }}</span>
 								</figcaption>
-								<div class="overlay {{ 'overlayItem' + ''.join(rarity.split()) }}">
+								<div class="overlay {{ 'overlayAddon' + ''.join(rarity.split()) }}">
 									<div class="overlay-heading">
-										<span style="font-size: 16px; font-weight: 600;">{{ item['name'] }}</span>
+										<span style="font-size: 16px; font-weight: 600;">{{ addon['addon-name'] }}</span>
 										<span style="font-size: 13px;">{{ rarity }}</span>
 									</div>
 									<div class="overlay-content">
-										<p style="font-size: 15px;">{{ item['description'] }}</p>
+										<p style="font-size: 15px;">{{ addon['addon-description'] }}</p>
 									</div>
 								</div>
 							</div>
@@ -291,31 +313,9 @@
 						</div>
 						{% endfor %}
 					</div>
-					<div class="subsubTabContent" id="AddonsContent">
-						{% for rarity,addons in info['addons'].items() %}
-						<div class="flex-container">
-						{% for addon in addons %}
-						<div class="container-addons">
-							<img class="addon-image lozad" data-src={{ addon['addon-image-alt'] }} height="80" width="80" draggable="true"
-								ondragstart="drag(event)" id={{ addon['addon-id'] }} credit="u/ambieobambie">
-							<figcaption>
-								<span>{{ addon['addon-name'] }}</span>
-							</figcaption>
-							<div class="overlay {{ 'overlayAddon' + ''.join(rarity.split()) }}">
-								<div class="overlay-heading">
-									<span style="font-size: 16px; font-weight: 600;">{{ addon['addon-name'] }}</span>
-									<span style="font-size: 13px;">{{ rarity }}</span>
-								</div>
-								<div class="overlay-content">
-									<p style="font-size: 15px;">{{ addon['addon-description'] }}</p>
-								</div>
-							</div>
-						</div>
-						{% endfor %}
 					</div>
-					{% endfor %}
 				</div>
-				</div>
+				{% endif %}
 			</div>
 		</div>
 		{% endfor %}
@@ -332,10 +332,10 @@
 	observer.observe();
 </script>
 <script>
-	document.getElementById("defaultOpen").click();
+	document.querySelector("button[data-tab-open=default]").click()
 </script>
 <script type="text/javascript">
-	$("[class^='container-']").mouseenter(function(){
+	$("[class^='container-perks'], [class^='container-addons'], [class^='container-items']").mouseenter(function(){
 		var f = $(this).find('.overlay');
 		var coords = f[0].getBoundingClientRect()
 		var screenWidth = $(window).width();
